fixes reload dialog on wayland

avoid that after initial triggering this repaint and
more of main window is destroyed

BUG: 440583